tests/snapshots/test_e2e__codegen@unary_negation.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/unary_negation.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            AllocateStack {
                stack_offset: -4,
            },
            Mov {
                source: Imm(
                    1,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Unary {
                op: Neg,
                operand: Stack(
                    -4,
                ),
            },
            Mov {
                source: Stack(
                    -4,
                ),
                destination: Register(
                    AX,
                ),
            },
            Ret,
        ],
    },
}
