tests/snapshots/test_e2e__lexer@binary_comparison.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_comparison.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        1,
    ),
    LessThan,
    Constant(
        2,
    ),
    Semicolon,
    CloseBrace,
]
