tests/snapshots/test_e2e__lexer@binary_div.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_div.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        4,
    ),
    ForwardSlash,
    Constant(
        2,
    ),
    Semicolon,
    CloseBrace,
]
