tests/snapshots/test_e2e__lexer@binary_modulo.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_modulo.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        3,
    ),
    Percent,
    Constant(
        2,
    ),
    Semicolon,
    CloseBrace,
]
