tests/snapshots/test_e2e__lexer@binary_mult.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_mult.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        2,
    ),
    Asterisk,
    Constant(
        3,
    ),
    Semicolon,
    CloseBrace,
]
