tests/snapshots/test_e2e__lexer@binary_op_precedence.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_op_precedence.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        4,
    ),
    ForwardSlash,
    Constant(
        2,
    ),
    Plus,
    Constant(
        2,
    ),
    Asterisk,
    OpenParen,
    Constant(
        2,
    ),
    Plus,
    Constant(
        1,
    ),
    CloseParen,
    Semicolon,
    CloseBrace,
]
