tests/snapshots/test_e2e__lexer@binary_sum.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/binary_sum.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Constant(
        2,
    ),
    Plus,
    Constant(
        3,
    ),
    Semicolon,
    CloseBrace,
]
