tests/snapshots/test_e2e__lexer@integer_constant.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/integer_constant.c
---
Lexer(
    [
        IntKeyword,
        Identifier(
            "main",
        ),
        OpenParen,
        VoidKeyword,
        CloseParen,
        OpenBrace,
        ReturnKeyword,
        Constant(
            1,
        ),
        Semicolon,
        CloseBrace,
    ],
)
